<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<packaging>pom</packaging>
	<groupId>com.lanternsoftware</groupId>
	<artifactId>LanternPowerMonitor</artifactId>
	<name>LanternPowerMonitor</name>
	<version>1.0.0</version>

	<properties>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<cm.version>1.1.0</cm.version>
		<util.version>1.0.0</util.version>
		<rules.version>1.0.0</rules.version>
		<zw.version>1.0.0</zw.version>
	</properties>

	<modules>
		<module>currentmonitor</module>
		<module>util</module>
		<module>rules</module>
		<module>zwave</module>
	</modules>
</project>